[project]
name = "byong2json"
version = "1.0.2"
description = "Tool for converting BYOND hub and player data to JSON strings or Python dictionaries."
license = "MIT"
authors = [
    "Herma <herma@herma.moe>",
]
readme = "README.md"
repository = "https://github.com/hermaplusplus/byond2json"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"